fixed tiles not packing on mobile

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -70,8 +70,8 @@ body, html
 .contenttilediv
     margin: 20px 20px
     padding: 10px
-    width: 150px
-    height: 150px
+    width: min(50vw - 40px, 150px)
+    height: min(50vw - 40px, 150px)
     border-radius: 2px
     display: flex
     justify-content: center
